--- a/_includes/page__taxonomy.html
+++ b/_includes/page__taxonomy.html
@@ -1,5 +1,5 @@
 {% if page.gitlink %}
-  <p><a href="{{ page.gitlink }}">Source</a></p>
+  <h3><a href="{{ page.gitlink }}">Source</a></p></h3>
 {% endif %}
 
 {% if page.authors %}
